code modified to push df to heroku postgres

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4         FORD  SRW SUPER DUTY        2003.0      NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "166383"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "166383"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "[166383 rows x 14 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,20 +600,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "traffic_2016.to_csv(os.path.join('.','data','traffic_stops_2016.csv'))"
+    "traffic_2016.to_csv(os.path.join('.','data','traffic_stops_2016.csv'),index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2 \n",
+    "import io\n",
+    "connection_string = 'postgres://dkckrqblbuejjw:b51876501e6a35b8c6a9bf0555f970110a5aae9a34435d05e53f37c4be7d55c2@ec2-34-194-198-238.compute-1.amazonaws.com:5432/dm8glg0qkh59t'\n",
+    "engine = create_engine(connection_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas to_sql was taking hours so checked stackoverflow for help\n",
+    "# the following code can push the data to postgres in under a minute\n",
+    "\n",
+    "traffic_2016.head(0).to_sql('traffic_2016', engine, if_exists='replace',index=False) #drops old table and creates new empty table\n",
+    "\n",
+    "conn = engine.raw_connection()\n",
+    "cur = conn.cursor()\n",
+    "output = io.StringIO()\n",
+    "traffic_2016.to_csv(output, sep='\\t', header=False, index=False)\n",
+    "output.seek(0)\n",
+    "contents = output.getvalue()\n",
+    "cur.copy_from(output, 'traffic_2016', null=\"\") # null values become ''\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#traffic_2016.to_sql(name='traffic_stops', con=engine, if_exists='append', index=False, chunksize=10000)"
+   ]
   }
  ],
  "metadata": {
